# ticket-backend-rs

./: .env  Cargo.toml
.sqlx/: query-fa3fa71ef753e388e52d81a2dddcf56d2ce0be1aac0c5b56488a242e61bb3013.json
src/: main.rs
src/handlers/: match_handlers.rs  mod.rs  team_handlers.rs
