[package]
name = "ticket-backend-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.0", features = ["v4"] }

dotenv = "0.15"
salvo = "0.72.0"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"

sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "macros",
    "mysql",
    "time",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.9.0"
